--- a/css/dev/gutenberg-editor-styles.css
+++ b/css/dev/gutenberg-editor-styles.css
@@ -43,12 +43,13 @@ img {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -451,12 +452,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -754,12 +756,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -1201,12 +1204,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -1457,12 +1461,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -1743,12 +1748,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -1971,12 +1977,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -2222,12 +2229,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -2506,12 +2514,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -2735,12 +2744,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -2965,12 +2975,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -3230,12 +3241,13 @@ textarea:focus {
   --color-white: #fff;
   --azul-leitura: #004d8f;
   --azul-forte: #005ce8;
+  --destaque: #f7710c;
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
-  --color-main: var(--color-valhalla);
+  --color-main: var(--azul-leitura);
   --color-heading: var(--color-main);
   --color-paragraph: var(--color-east-bay);
   --color-link-text: var(--color-science-blue);
@@ -3498,6 +3510,7 @@ body:not(.wp-admin) {
 
 .container {
   margin: 0 auto;
+  width: 100vw;
   max-width: 1440px;
   padding: var(--spacing-container-padding-block) var(--spacing-container-padding-inline);
 }
