--- a/sass/navigation/_nav-mobile.scss
+++ b/sass/navigation/_nav-mobile.scss
@@ -7,31 +7,32 @@
 // CSS variables
 :root {
   // Site-header and general mobile navigation elements
-  --color-background-nav-mobile-header: var(--color-main);
-  --color-background-nav-mobile-header-active: var(--color-main);
-  --width-navigation: min(27.5rem, 100vw);
+  --color-background-nav-mobile-header: var(--color-white);
+  --color-background-nav-mobile-header-active: var(--color-white);
+  // --width-navigation: min(27.5rem, 100vw);
+  --width-navigation: 100vw;
 
   // Affecting to both main and sub-levels
-  --color-background-menu-items: var(--color-main);
-  --color-background-menu-items-active: var(--color-main);
+  --color-background-menu-items: var(--color-white);
+  --color-background-menu-items-active: var(--color-white);
   --color-separator-nav-mobile: rgb(255 255 255 / .1);
-  --color-current-menu-item: var(--color-white);
-  --color-dropdown-toggle-mobile: var(--color-white);
+  --color-current-menu-item: var(--color-black);
+  --color-dropdown-toggle-mobile: var(--color-black);
 
   // Main level items on mobile
-  --typography-size-main-level-mobile: 0.9375rem;
+  --typography-size-main-level-mobile: 1.2rem;
   --typography-weight-main-level-mobile: 600;
   --padding-main-level-vertical-mobile: 0.75rem;
-  --color-main-level-menu-item-hover-focus-mobile: var(--color-white);
-  --color-main-level-menu-item-mobile: var(--color-white);
+  --color-main-level-menu-item-hover-focus-mobile: var(--color-black);
+  --color-main-level-menu-item-mobile: var(--color-black);
 
   // Sub-menu items on mobile
-  --typography-size-sub-menu-mobile: 0.9375rem;
+  --typography-size-sub-menu-mobile:1.1rem;
   --typography-weight-sub-menu-mobile: 600;
   --margin-left-sub-menu: 0.625rem;
   --padding-sub-menu-vertical-mobile: 0.5rem;
   --padding-sub-menu-horizontal-mobile: 1.5625rem;
-  --color-sub-menu-mobile: rgb(255 255 255 / .8);
+  --color-sub-menu-mobile: var(--cinza-medio);
 }
 
 // Navigation core functionality
@@ -76,7 +77,7 @@
 
   .menu-items-wrapper {
     backface-visibility: hidden;
-    background-color: var(--color-background-menu-items);
+    background-color: var(--color-white);
     // Real height is calculated in JS so this is a fallback
     height: calc(100vh - 7.2rem);
     overflow: auto;
@@ -92,7 +93,13 @@
     transition: all 180ms ease-in-out;
     visibility: hidden;
     width: var(--width-navigation);
+    padding-top: 100px;
     z-index: 5;
+  }
+
+  .logo-preta {
+    padding: var(--padding-sub-menu-vertical-mobile) calc(var(--padding-sub-menu-horizontal-mobile) - var(--dropdown-toggle-size)/2) var(--padding-sub-menu-vertical-mobile) var(--padding-sub-menu-horizontal-mobile);
+    margin-bottom: 40px;
   }
 
   .menu-items {
@@ -106,6 +113,8 @@
     display: block;
     font-size: var(--typography-size-main-level-mobile);
     font-weight: var(--typography-weight-main-level-mobile);
+    line-height: 1.8;
+    text-transform: uppercase;
     margin-left: 0;
     margin-right: 0;
     padding-bottom: var(--padding-main-level-vertical-mobile);
@@ -156,8 +165,9 @@
     border: 0;
     color: var(--color-dropdown-toggle-mobile);
     display: inline-flex;
+    justify-content: right;
     height: 100%;
-    left: auto;
+    left: 0;
     margin-top: 0;
     overflow: hidden;
     padding-bottom: var(--padding-sub-menu-vertical-mobile);
@@ -171,7 +181,7 @@
 
     // Make svg not clickable so that it won't interfere with the menu item
     svg {
-      background-image: url('data:image/svg+xml, %3Csvg xmlns="http://www.w3.org/2000/svg" style="width: var(--dropdown-toggle-size); height: var(--dropdown-toggle-size);" width="10" height="10" viewBox="0 0 10 10"%3E%3Cpath fill="none" stroke="%23fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M5 1.5v7M1.5 5h7"/%3E%3C/svg%3E%0A');
+      background-image: url('data:image/svg+xml, %3Csvg xmlns="http://www.w3.org/2000/svg" style="width: var(--dropdown-toggle-size); height: var(--dropdown-toggle-size);" width="10" height="10" viewBox="0 0 10 10"%3E%3Cpath fill="none" stroke="%23000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M5 1.5v7M1.5 5h7"/%3E%3C/svg%3E%0A');
       background-size: 100%;
       height: var(--dropdown-toggle-size);
       pointer-events: none;
@@ -183,16 +193,14 @@
 
       // Let's hide the original SVG because we have a custom one here
       path {
-        display: none;
+      display: none;
       }
     }
   }
 
   .dropdown-toggle.toggled-on {
     svg {
-      background-image: url('data:image/svg+xml, %3Csvg xmlns="http://www.w3.org/2000/svg" style="width: var(--dropdown-toggle-size); height: var(--dropdown-toggle-size);" width="10" height="10" viewBox="0 0 10 10"%3E%3Cpath fill="none" stroke="%23fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1.5 5h7"/%3E%3C/svg%3E%0A');
-
-      // Rotate 180 degrees
+      background-image: url('data:image/svg+xml, %3Csvg xmlns="http://www.w3.org/2000/svg" style="width: var(--dropdown-toggle-size); height: var(--dropdown-toggle-size);" width="10" height="10" viewBox="0 0 10 10"%3E%3Cpath fill="none" stroke="%239b9b9b" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M1.5 5h7"/%3E%3C/svg%3E%0A');
       transform: rotate(-180deg);
     }
   }
@@ -233,5 +241,12 @@
   .js-nav-active .site-main,
   .js-nav-active .site-footer {
     transform: translate3d(calc(var(--width-navigation) * -1), 0, 0);
+  }
+
+  .redes-sociais {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 40px;
   }
 }
