--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -62,6 +62,7 @@ body:not(.wp-admin) {
   margin: 0 auto;
   margin-left: auto;
   margin-right: auto;
+  width: 100vw;
   max-width: breakpoints.$width-grid-base;
   padding-bottom: var(--spacing-container-padding-block);
   padding-left: var(--spacing-container-padding-inline);
