--- a/sass/navigation/_nav-desktop.scss
+++ b/sass/navigation/_nav-desktop.scss
@@ -6,17 +6,17 @@
 :root {
 
   // Affecting to both main and sub-levels
-  --color-dropdown-toggle: var(--color-valhalla);
+  --color-dropdown-toggle: var(--color-white);
   --color-current: var(--color-link-text);
   --dropdown-toggle-size: 0.75rem;
 
   // Main level items on desktop
   --typography-size-main-level: var(--typography-size-16);
-  --typography-weight-main-level: var(--typography-weight-bold);
+  --typography-weight-main-level: var(--typography-weight-medium);
   --padding-main-level-horizontal: 0;
   --padding-main-level-vertical: 0.375rem;
-  --color-main-level: var(--color-black);
-  --color-hover-main-level: var(--color-link-text);
+  --color-main-level: var(--color-white);
+  --color-hover-main-level: var(--color-white);
   --gap-between-dropdown-toggle: 0.9375rem;
   --gap-main-level-horizontal: 1.5625rem;
 
@@ -80,6 +80,7 @@
     display: inline-flex;
     font-size: var(--typography-size-main-level);
     font-weight: var(--typography-weight-main-level);
+    text-transform: uppercase;
     margin-left: 0;
     margin-right: 0;
     padding-bottom: var(--padding-main-level-vertical);
