--- a/sass/navigation/_nav-toggle.scss
+++ b/sass/navigation/_nav-toggle.scss
@@ -1,15 +1,16 @@
 // 🍔
 .hamburger {
   --hamburger-layer-height: 2px;
-  --hamburger-width: 2rem;
-  --hamburger-color: var(--color-white);
-  --hamburger-color-active: var(--color-white);
+  --hamburger-width: 1.5rem;
+  --hamburger-color: var(--azul-leitura);
+  --hamburger-color-active: var(--cinza-medio);
   background-color: var(--hamburger-color);
   flex-shrink: 0;
   height: var(--hamburger-layer-height);
   position: relative;
   transition: all .2s ease 0s;
   width: var(--hamburger-width);
+  border-radius: var(--hamburger-layer-height);
 
   // Hamburger layers
   &::before,
@@ -21,6 +22,7 @@
     position: absolute;
     transition: all .2s ease 0s;
     width: var(--hamburger-width);
+    border-radius: var(--hamburger-layer-height);
   }
 
   &::before {
@@ -33,10 +35,10 @@
 }
 
 // 🍔 third layer width
-body:not(.js-nav-active) .nav-toggle .hamburger::after,
-body:not(.js-nav-active) .nav-toggle:focus .hamburger::after {
-  width: 80%;
-}
+// body:not(.js-nav-active) .nav-toggle .hamburger::after,
+// body:not(.js-nav-active) .nav-toggle:focus .hamburger::after {
+//   width: 80%;
+// }
 
 // 🍔 third layer hover
 body:not(.js-nav-active) .nav-toggle:hover .hamburger::after {
@@ -64,14 +66,14 @@ body:not(.js-nav-active) .nav-toggle:hover .hamburger::after {
 }
 
 // Make visual label out of aria-label
-.nav-toggle::after {
-  color: var(--color-white);
-  content: attr(aria-label);
-  font-size: var(--typography-size-14);
-  font-weight: var(--typography-weight-semibold);
-  margin-left: 1rem;
-  white-space: nowrap;
-}
+// .nav-toggle::after {
+//   color: var(--color-white);
+//   content: attr(aria-label);
+//   font-size: var(--typography-size-14);
+//   font-weight: var(--typography-weight-semibold);
+//   margin-left: 1rem;
+//   white-space: nowrap;
+// }
 
 // The actual toggle <button>
 // Uncomment lines if absolute positioning of toggle is needed
@@ -91,4 +93,5 @@ body:not(.js-nav-active) .nav-toggle:hover .hamburger::after {
   padding: 0;
   text-decoration: none;
   user-select: none;
+  z-index: 16;
 }
